# zkperf

./: .gitignore  .gitmodules  COMPACTIFIED_CONTEXT.md  Cargo.toml  LATTICE_SHARDS.md  MULTI_MODAL.md  Makefile  ONBOARDING.md  README.md  build.rs  erdfa-publish  flake.nix  kagenti-selinux.nix  locate-zkperf.txt  moltis-chat.json  notebooklm.txt  result  zkperf-capture  zkperf-chat.json  zkperf-da51.service  zkperf-report.json  zkperf-workflow.mk
cargo-zkperf/: Cargo.toml
data/: bundle.json
docs/: ERDFA_INTEGRATION.md  EXISTING_DATA.md  MDL_EVIDENCE_V1.md  NEED_FOR_INTROSPECTION.md  NIX_DERIVATIONS.md  RECORDING_TOOLS.md  REGISTER_RECORDING_GUIDE.md  SAMPLE_TRACE_COMPRESSION.md  ZKPERF_STREAM_V1.md
ebpf/: zkperf-ebpf-load.sh  zkperf_enforce.bpf.c
erdfa-stream/: REPORT.md  erdfa-datagrams.txt  reflect-log.txt
examples/: analyze-recordings.sh  benchmark-all.sh  component-proofs.sh  conformal-witness.sh  game-state-witness.sh  http-witness.sh  import-existing.sh  stage-comparison.sh  zkperf-chain.py  zkperf-full-chain.sh  zkperf-verify.js
filters/: hash_trace.toml
moltis-search/: Cargo.toml  Makefile  flake.nix
proofs/: NO_OLD_CODE_MANIFEST.json  README.md  conformal_witness.json  pipelight-dev_analyzer_3.json  pipelight-dev_compiler_1.json  pipelight-dev_executor_7.json  pipelight-dev_generator_6.json  pipelight-dev_optimizer_2.json  pipelight-dev_parser_0.json  pipelight-dev_profiler_9.json  pipelight-dev_tracer_8.json  pipelight-dev_transformer_4.json  pipelight-dev_validator_5.json  state-4-zkperf.commitment  state-4-zkperf.json  state-4-zkperf.perf.txt  verification.json  witness-chain.json
recordings/: build.stat.txt  coq_actual.perf.data  lua_actual.perf.data  (+9 more)
zkperf-macros/: Cargo.toml
zkperf-macros/src/: lib.rs
zkperf-witness/: Cargo.toml
zkperf-witness/examples/: boundary_demo.rs
zkperf-witness/src/: cache.rs  lib.rs  share.rs  zkp.rs
(+116 files in other folders)
