[package]
name = "zkperf-macros"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "Proc macros for zkPerf security context boundaries"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
sha2 = "0.10"
hex = "0.4"
