[package]
name = "zkperf-witness"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "Runtime witness recording for zkPerf security boundaries"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
zkperf-macros = { path = "../zkperf-macros" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
